# oficina-mebers-django

./: .env_exemplo  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
media/images/: 7092ef82-77cb-4317-8f42-2ebb0d99976b  833589a6-37ae-4c3d-b20c-a23644f32bfc  a5e5367a-5dae-45e3-aecc-310267f9544d
oficinamebers/: admin.py  apps.py
oficinamebers/migrations/: 0001_initial.py  0002_remove_gerente_email_remove_gerente_nome_and_more.py  0003_vendedor_cliente.py  0004_categoria.py  0005_produto.py  0006_remove_produto_imagem_imagensproduto.py  0007_remove_gerente_usuario_remove_vendedor_usuario_and_more.py  0008_compra.py  0009_itenscompra.py  0010_itenscompra_preco_item.py  0011_compra_data.py  0012_compra_tipo_pagamento.py  0013_produto_quantidade.py  0014_alter_itenscompra_quantidade.py  0015_alter_itenscompra_quantidade_and_more.py
oficinamebers/models/: __init__.py  cliente.py  compra.py  gerente.py  produto.py  vendedor.py
oficinamebers/serializers/: __init__.py  categoria.py  cliente.py  compra.py  gerente.py  produto.py  vendedor.py
oficinamebers/views/: __init__.py  categoria.py  cliente.py  compra.py  gerente.py  produto.py  vendedor.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py  0002_usuario_tipo_usuario.py  0003_remove_usuario_tipo_usuario.py
